Compiler/Grammar/output/AutoHotkeyParser.java
// $ANTLR 3.4 C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g 2012-05-26 23:04:59

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class AutoHotkeyParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BITWISE", "COMMENT", "COMPARE", "EXPONENT", "IDENTIFIER", "LINE_END", "NOT", "NUMBER", "OR", "PADDING", "PARAMETER", "SEPARATOR", "SHIFT", "STRING", "UNARY", "'%'", "'('", "')'", "'*'", "'**'", "'+'", "'++'", "'-'", "'--'", "'.'", "'/'", "'//'", "':'", "'::'", "'?'", "'~='"
    };

    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int AND=4;
    public static final int ASSIGN=5;
    public static final int BITWISE=6;
    public static final int COMMENT=7;
    public static final int COMPARE=8;
    public static final int EXPONENT=9;
    public static final int IDENTIFIER=10;
    public static final int LINE_END=11;
    public static final int NOT=12;
    public static final int NUMBER=13;
    public static final int OR=14;
    public static final int PADDING=15;
    public static final int PARAMETER=16;
    public static final int SEPARATOR=17;
    public static final int SHIFT=18;
    public static final int STRING=19;
    public static final int UNARY=20;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AutoHotkeyParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AutoHotkeyParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AutoHotkeyParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:1: program : line ( ( LINE_END )+ line )* ;
    public final AutoHotkeyParser.program_return program() throws RecognitionException {
        AutoHotkeyParser.program_return retval = new AutoHotkeyParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token LINE_END2=null;
        AutoHotkeyParser.line_return line1 =null;

        AutoHotkeyParser.line_return line3 =null;


        Object LINE_END2_tree=null;

        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:10: ( line ( ( LINE_END )+ line )* )
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:12: line ( ( LINE_END )+ line )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_line_in_program25);
            line1=line();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, line1.getTree());

            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:17: ( ( LINE_END )+ line )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==LINE_END) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:19: ( LINE_END )+ line
            	    {
            	    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:19: ( LINE_END )+
            	    int cnt1=0;
            	    loop1:
            	    do {
            	        int alt1=2;
            	        int LA1_0 = input.LA(1);

            	        if ( (LA1_0==LINE_END) ) {
            	            alt1=1;
            	        }


            	        switch (alt1) {
            	    	case 1 :
            	    	    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:9:19: LINE_END
            	    	    {
            	    	    LINE_END2=(Token)match(input,LINE_END,FOLLOW_LINE_END_in_program29); if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) {
            	    	    LINE_END2_tree = 
            	    	    (Object)adaptor.create(LINE_END2)
            	    	    ;
            	    	    adaptor.addChild(root_0, LINE_END2_tree);
            	    	    }

            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt1 >= 1 ) break loop1;
            	    	    if (state.backtracking>0) {state.failed=true; return retval;}
            	                EarlyExitException eee =
            	                    new EarlyExitException(1, input);
            	                throw eee;
            	        }
            	        cnt1++;
            	    } while (true);


            	    pushFollow(FOLLOW_line_in_program32);
            	    line3=line();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, line3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class line_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "line"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:11:1: line : ( ( hotkey )=> hotkey | ( command )=> command | expression );
    public final AutoHotkeyParser.line_return line() throws RecognitionException {
        AutoHotkeyParser.line_return retval = new AutoHotkeyParser.line_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        AutoHotkeyParser.hotkey_return hotkey4 =null;

        AutoHotkeyParser.command_return command5 =null;

        AutoHotkeyParser.expression_return expression6 =null;



        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:11:7: ( ( hotkey )=> hotkey | ( command )=> command | expression )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==34) && (synpred1_AutoHotkey())) {
                alt3=1;
            }
            else if ( (LA3_0==IDENTIFIER) ) {
                int LA3_2 = input.LA(2);

                if ( (synpred2_AutoHotkey()) ) {
                    alt3=2;
                }
                else if ( (true) ) {
                    alt3=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;

                }
            }
            else if ( ((LA3_0 >= NOT && LA3_0 <= NUMBER)||(LA3_0 >= STRING && LA3_0 <= 22)||LA3_0==27||LA3_0==29) ) {
                alt3=3;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:11:9: ( hotkey )=> hotkey
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_hotkey_in_line52);
                    hotkey4=hotkey();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, hotkey4.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:12:5: ( command )=> command
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_command_in_line66);
                    command5=command();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, command5.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:13:5: expression
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_expression_in_line72);
                    expression6=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression6.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "line"


    public static class hotkey_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "hotkey"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:15:1: hotkey : '::' line ;
    public final AutoHotkeyParser.hotkey_return hotkey() throws RecognitionException {
        AutoHotkeyParser.hotkey_return retval = new AutoHotkeyParser.hotkey_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal7=null;
        AutoHotkeyParser.line_return line8 =null;


        Object string_literal7_tree=null;

        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:15:9: ( '::' line )
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:15:11: '::' line
            {
            root_0 = (Object)adaptor.nil();


            string_literal7=(Token)match(input,34,FOLLOW_34_in_hotkey81); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal7_tree = 
            (Object)adaptor.create(string_literal7)
            ;
            adaptor.addChild(root_0, string_literal7_tree);
            }

            pushFollow(FOLLOW_line_in_hotkey83);
            line8=line();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, line8.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "hotkey"


    public static class command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "command"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:1: command : IDENTIFIER ( ( SEPARATOR !)? PARAMETER ( SEPARATOR ! PARAMETER )* )? ;
    public final AutoHotkeyParser.command_return command() throws RecognitionException {
        AutoHotkeyParser.command_return retval = new AutoHotkeyParser.command_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IDENTIFIER9=null;
        Token SEPARATOR10=null;
        Token PARAMETER11=null;
        Token SEPARATOR12=null;
        Token PARAMETER13=null;

        Object IDENTIFIER9_tree=null;
        Object SEPARATOR10_tree=null;
        Object PARAMETER11_tree=null;
        Object SEPARATOR12_tree=null;
        Object PARAMETER13_tree=null;

        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:10: ( IDENTIFIER ( ( SEPARATOR !)? PARAMETER ( SEPARATOR ! PARAMETER )* )? )
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:12: IDENTIFIER ( ( SEPARATOR !)? PARAMETER ( SEPARATOR ! PARAMETER )* )?
            {
            root_0 = (Object)adaptor.nil();


            IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_command93); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER9_tree = 
            (Object)adaptor.create(IDENTIFIER9)
            ;
            adaptor.addChild(root_0, IDENTIFIER9_tree);
            }

            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:23: ( ( SEPARATOR !)? PARAMETER ( SEPARATOR ! PARAMETER )* )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0 >= PARAMETER && LA6_0 <= SEPARATOR)) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:25: ( SEPARATOR !)? PARAMETER ( SEPARATOR ! PARAMETER )*
                    {
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:34: ( SEPARATOR !)?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==SEPARATOR) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:34: SEPARATOR !
                            {
                            SEPARATOR10=(Token)match(input,SEPARATOR,FOLLOW_SEPARATOR_in_command97); if (state.failed) return retval;

                            }
                            break;

                    }


                    PARAMETER11=(Token)match(input,PARAMETER,FOLLOW_PARAMETER_in_command101); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PARAMETER11_tree = 
                    (Object)adaptor.create(PARAMETER11)
                    ;
                    adaptor.addChild(root_0, PARAMETER11_tree);
                    }

                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:47: ( SEPARATOR ! PARAMETER )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==SEPARATOR) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:17:49: SEPARATOR ! PARAMETER
                    	    {
                    	    SEPARATOR12=(Token)match(input,SEPARATOR,FOLLOW_SEPARATOR_in_command105); if (state.failed) return retval;

                    	    PARAMETER13=(Token)match(input,PARAMETER,FOLLOW_PARAMETER_in_command108); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    PARAMETER13_tree = 
                    	    (Object)adaptor.create(PARAMETER13)
                    	    ;
                    	    adaptor.addChild(root_0, PARAMETER13_tree);
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "command"


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:19:1: start : expression ;
    public final AutoHotkeyParser.start_return start() throws RecognitionException {
        AutoHotkeyParser.start_return retval = new AutoHotkeyParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        AutoHotkeyParser.expression_return expression14 =null;



        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:19:8: ( expression )
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:19:10: expression
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_expression_in_start123);
            expression14=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expression14.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:21:1: expression : assignment ( SEPARATOR ! assignment )* ;
    public final AutoHotkeyParser.expression_return expression() throws RecognitionException {
        AutoHotkeyParser.expression_return retval = new AutoHotkeyParser.expression_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SEPARATOR16=null;
        AutoHotkeyParser.assignment_return assignment15 =null;

        AutoHotkeyParser.assignment_return assignment17 =null;


        Object SEPARATOR16_tree=null;

        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:21:12: ( assignment ( SEPARATOR ! assignment )* )
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:21:14: assignment ( SEPARATOR ! assignment )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_assignment_in_expression132);
            assignment15=assignment();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment15.getTree());

            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:21:25: ( SEPARATOR ! assignment )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==SEPARATOR) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:21:27: SEPARATOR ! assignment
            	    {
            	    SEPARATOR16=(Token)match(input,SEPARATOR,FOLLOW_SEPARATOR_in_expression136); if (state.failed) return retval;

            	    pushFollow(FOLLOW_assignment_in_expression139);
            	    assignment17=assignment();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment17.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expression"


    public static class assignment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "assignment"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:23:1: assignment : ( ( ( access ASSIGN assignment )=> access ASSIGN ^ assignment ) | ternary );
    public final AutoHotkeyParser.assignment_return assignment() throws RecognitionException {
        AutoHotkeyParser.assignment_return retval = new AutoHotkeyParser.assignment_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ASSIGN19=null;
        AutoHotkeyParser.access_return access18 =null;

        AutoHotkeyParser.assignment_return assignment20 =null;

        AutoHotkeyParser.ternary_return ternary21 =null;


        Object ASSIGN19_tree=null;

        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:23:12: ( ( ( access ASSIGN assignment )=> access ASSIGN ^ assignment ) | ternary )
            int alt8=2;
            switch ( input.LA(1) ) {
            case 21:
                {
                int LA8_1 = input.LA(2);

                if ( (synpred3_AutoHotkey()) ) {
                    alt8=1;
                }
                else if ( (true) ) {
                    alt8=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;

                }
                }
                break;
            case NUMBER:
                {
                int LA8_2 = input.LA(2);

                if ( (synpred3_AutoHotkey()) ) {
                    alt8=1;
                }
                else if ( (true) ) {
                    alt8=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 2, input);

                    throw nvae;

                }
                }
                break;
            case STRING:
                {
                int LA8_3 = input.LA(2);

                if ( (synpred3_AutoHotkey()) ) {
                    alt8=1;
                }
                else if ( (true) ) {
                    alt8=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 3, input);

                    throw nvae;

                }
                }
                break;
            case IDENTIFIER:
                {
                int LA8_4 = input.LA(2);

                if ( (synpred3_AutoHotkey()) ) {
                    alt8=1;
                }
                else if ( (true) ) {
                    alt8=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 4, input);

                    throw nvae;

                }
                }
                break;
            case 22:
                {
                int LA8_5 = input.LA(2);

                if ( (synpred3_AutoHotkey()) ) {
                    alt8=1;
                }
                else if ( (true) ) {
                    alt8=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 5, input);

                    throw nvae;

                }
                }
                break;
            case NOT:
            case UNARY:
            case 27:
            case 29:
                {
                alt8=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:23:14: ( ( access ASSIGN assignment )=> access ASSIGN ^ assignment )
                    {
                    root_0 = (Object)adaptor.nil();


                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:23:14: ( ( access ASSIGN assignment )=> access ASSIGN ^ assignment )
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:23:16: ( access ASSIGN assignment )=> access ASSIGN ^ assignment
                    {
                    pushFollow(FOLLOW_access_in_assignment164);
                    access18=access();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, access18.getTree());

                    ASSIGN19=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignment166); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    ASSIGN19_tree = 
                    (Object)adaptor.create(ASSIGN19)
                    ;
                    root_0 = (Object)adaptor.becomeRoot(ASSIGN19_tree, root_0);
                    }

                    pushFollow(FOLLOW_assignment_in_assignment169);
                    assignment20=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment20.getTree());

                    }


                    }
                    break;
                case 2 :
                    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:24:5: ternary
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ternary_in_assignment176);
                    ternary21=ternary();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ternary21.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "assignment"


    public static class ternary_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ternary"
    // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:26:1: ternary : or ( '?' ^ ternary ':' ! ternary )? ;
    public final AutoHotkeyParser.ternary_return ternary() throws RecognitionException {
        AutoHotkeyParser.ternary_return retval = new AutoHotkeyParser.ternary_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal23=null;
        Token char_literal25=null;
        AutoHotkeyParser.or_return or22 =null;

        AutoHotkeyParser.ternary_return ternary24 =null;

        AutoHotkeyParser.ternary_return ternary26 =null;


        Object char_literal23_tree=null;
        Object char_literal25_tree=null;

        try {
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:26:10: ( or ( '?' ^ ternary ':' ! ternary )? )
            // C:\\Users\\Anthony\\Dropbox\\AHK Scripts\\Compiler\\Grammar\\AutoHotkey.g:26:12: or ( '?' ^ ternary ':' ! ternary )?
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_or_in_ternary185);
            or22=or();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, or22.getTree());

